Implemented vector, point, and ray basic types

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(FILES ${FILES}
+	src/types/vec.cpp
+	src/types/point.cpp
+	src/types/ray.cpp
+
 	src/main.cpp
 )
 
